stranica dobitnici.html

--- a/dobitnici.html
+++ b/dobitnici.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,15 +9,14 @@
     <!-- We will revisit font in the end -->
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-1.css">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
 
     <title>Državna lutrija Srbije</title>
 </head>
-
 <body>
 
     <!-- NAVIGATION -->
@@ -78,295 +76,109 @@
     </header>
     <!-- NAVIGATION -->
 
-    <!-- ESGG HERO -->
-    <section class="esgg-hero esgg-hero--greb">
-        <div class="esgg-hero__bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="gg-logo">
-                            <img src="images/e-srecke/greb-greb_logo.svg" alt="E-srećke logo">
+    <!-- DOBITNICI HERO -->
+    <section class="hero-dobitnici">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="hero-dobitnici__content">
+                        <h1 class="text-white text-uppercase text-center font-weight-bold">Kad vi igrate, ko još dobija?</h1>
+                        <p class="text-white text-center">U prethodnoj godini je od svake vaše odigrane igre na sreću u dobrotvorne svrhe otišlo</p>
+                        <div class="hero-dobitnici__h2 d-flex justify-content-center">
+                            <h2 class="text-white text-center font-weight-bold">55.000.000 dinara!</h2>
                         </div>
-                        <div class="gg-text">
-                            <h1>Ogrebi i <br>blago tebi!</h1>
-                            <p>Instant zabava te čeka na prodajnim mestima <span class="d-inline d-sm-block">Državne
-                                    lutrije Srbije i partnera.</span></p>
-                            <a href="#">Uplatna mesta <i class="fas fa-chevron-right"></i></a>
-                        </div>
+                        <p class="text-white text-center">Hvala od srca!</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ESGG HERO -->
+    <!-- DOBITNICI HERO -->
 
-    <!-- SRECKE -->
-    <section class="srecke srecke--greb container">
+    <!-- DOBITNICI CAROUSEL -->
+    <section class="dobitnici-carousel container">
 
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/veca-sreca.png" alt="">
+        <div class="dobitnici-carousel__item">
+            <div class="item-img">
+                <img src="images/dobitnici/danijela-stjepanovic.jpg" alt="">
             </div>
-            <div class="srecke-item__text-big">
-                Veća sreća
+            <div class="item-name text-center">
+                Danijela Stjepanović (33) <br>Beograd
             </div>
-            <div class="srecke-item__price">
-                premija:<br>2 x 6.000.000 din.
+            <div class="item-testimonial text-center">
+                “Idem na put oko sveta kada prođe Korona!”
             </div>
-            <div class="srecke-item__max">
-                cena: 200 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/neon.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Neon
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>2 x 6.500.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 200 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/domine.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Domine
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>10 x 1.500.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 150 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/kolo-srece.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Kolo Sreće
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>6 x 3.000.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 100 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/instant-loto.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Instant loto
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>3 x 2.500.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 80 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/srecni-znaci.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Srećni znaci
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>3 x 3.500.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 100 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/greb-greb-100.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Greb Greb 100
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>4 x 3.550.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 100 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/ulepsaj.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Ulepšaj mi dan!
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>4 x 4.000.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 150 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/cup-sa-blagom.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Ćup sa blagom
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>5 x 3.000.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 100 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/pun-pogodak.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Pun pogodak!
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>3 x 4.000.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 100 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/greb-greb-game.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
+            <div class="item-decoration item-decoration--line"></div>
+            <div class="item-game text-center">
                 Greb Greb
             </div>
-            <div class="srecke-item__price">
-                premija:<br>4 x 4.550.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 150 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            <div class="item-prize text-center color-red">
+                3.000.000 din.
             </div>
         </div>
 
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/par-nepar.png" alt="">
+        <div class="dobitnici-carousel__item dobitnici-carousel__item--loto">
+            <div class="item-img">
+                <img src="images/dobitnici/milan-nikolic.jpg" alt="">
             </div>
-            <div class="srecke-item__text-big">
-                Par Nepar
+            <div class="item-name text-center">
+                Milan Nikolić (43) <br>Valjevo
             </div>
-            <div class="srecke-item__price">
-                premija:<br>4 x 4.500.000 din.
+            <div class="item-testimonial text-center text-white">
+                “Verovatno ću da se preselim na Mars lalala!”
             </div>
-            <div class="srecke-item__max">
-                cena: 150 din.
+            <div class="item-decoration item-decoration--line"></div>
+            <div class="item-game text-center">
+                Loto sedmica
             </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            <div class="item-prize item-prize--loto text-center">
+                2.500.000&euro;
             </div>
         </div>
+
+        <div class="dobitnici-carousel__item">
+            <div class="item-img">
+                <img src="images/dobitnici/branislav-jankovic.jpg" alt="">
+            </div>
+            <div class="item-name text-center">
+                Branislav Janković (26) <br>Subotica
+            </div>
+            <div class="item-testimonial text-center">
+                “Kupujem kuću na Zlatiboru ili Kopaoniku!”
+            </div>
+            <div class="item-decoration item-decoration--line"></div>
+            <div class="item-game text-center">
+                Kolo sreće
+            </div>
+            <div class="item-prize text-center color-red">
+                4.500.000 din.
+            </div>
+        </div>
+
+        <!-- <div class="dobitnici-carousel__item">
+            <div class="item-img">
+                <img src="images/dobitnici/branislav-jankovic.jpg" alt="">
+            </div>
+            <div class="item-name text-center">
+                Branislav Janković (26) <br>Subotica
+            </div>
+            <div class="item-testimonial text-center">
+                “Kupujem kuću na Zlatiboru ili Kopaoniku!”
+            </div>
+            <div class="item-decoration item-decoration--line"></div>
+            <div class="item-game text-center">
+                Kolo sreće
+            </div>
+            <div class="item-prize text-center color-red">
+                4.500.000 din.
+            </div>
+        </div> -->
 
     </section>
     <!-- SRECKE -->
 
-    <!-- SRECKE NEXT/PREV -->
-    <div class="srecke-btns justify-content-center align-items-center d-flex mt-4">
-        <p class="h5 mb-0 mr-3"><strong>Više srećki </strong></p>
-        <button type="button" id="prevv" class="slick-prev slick-arrow" style="">Previous</button>
-        <button type="button" id="nextt" class="slick-next slick-arrow" style="">Next</button>
-    </div>
-    <!-- SRECKE NEXT/PREV -->
-
-    <!-- PRIZE WINNERS -->
-    <section class="prize-winners">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-12">
-                    <img class="prize-winners__srecko" src="images/e-srecke/greb-srecko.png" alt="">
-                    <h1>Oni su osvojili glavnu premiju<span>!</span></h1>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <img class="prize-winners__winner" src="images/e-srecke/greb-premija1.png" alt="">
-                    <span class="name">Bratislav Janković (26) <br>Subotica</span>
-                    <span class="prize">Kolo sreće <br>4.500.000 din.</span>
-                </div>
-                <div class="col-md-4">
-                    <img class="prize-winners__winner" src="images/e-srecke/greb-premija2.png" alt="">
-                    <span class="name">Maja Vemić (31) <br>Kraljevo</span>
-                    <span class="prize">Ćup sa blagom <br>3.000.000 din.</span>
-                </div>
-                <div class="col-md-4">
-                    <img class="prize-winners__winner" src="images/e-srecke/greb-premija3.png" alt="">
-                    <span class="name">Srđan Galijaš (29) <br>Bački Petrovac</span>
-                    <span class="prize">20x Veća sreća <br>3.000.000 din.</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <button class="btn-dark">Svi dobitnici</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- PRIZE WINNERS -->
-
     <!-- CHARITY -->
-    <div class="charity charity--greb">
+    <div class="charity charity--srecke">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-4">
@@ -375,7 +187,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-lg-8">
-                    <div class="charity-text charity-text--greb">
+                    <div class="charity-text charity-text--srecke">
                         <p class="h1 charity-text__price"><strong>55.000.000 dinara</strong></p>
                         <p class="lg charity-text__text">odlazi u dobrotvorne svrhe zahvaljujuci vama. Lorem
                             ipsum dolor sit amet, consectetur adipiscing elit!</p>
@@ -515,22 +327,13 @@
     </footer>
     <!-- FOOTER -->
 
-    <script>
-        $(document).on("click", '[data-toggle="lightbox"]', function (event) {
-            event.preventDefault();
-            $(this).ekkoLightbox();
-        });
-    </script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/b071412929.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
