sredjen hero na greb-greb

--- a/greb-greb.html
+++ b/greb-greb.html
@@ -93,9 +93,13 @@
                                     lutrije Srbije i partnera.</span></p>
                             <a href="#">Uplatna mesta <i class="fas fa-chevron-right"></i></a>
                         </div>
+
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="gg-img-mob d-block d-md-none">
+            <img src="images/e-srecke/greb-man_bg-mob.png" alt="">
         </div>
     </section>
     <!-- ESGG HERO -->
