--- a/greb-greb.html
+++ b/greb-greb.html
@@ -11,10 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-1.css">
+
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
 
     <title>Državna lutrija Srbije</title>
 </head>
@@ -91,7 +92,7 @@
                             <h1>Ogrebi i <br>blago tebi!</h1>
                             <p>Instant zabava te čeka na prodajnim mestima <span class="d-inline d-sm-block">Državne
                                     lutrije Srbije i partnera.</span></p>
-                            <a href="#">Uplatna mesta <i class="fas fa-chevron-right"></i></a>
+                            <a href="#" class="link-arrow link-arrow--red">Uplatna mesta</a>
                         </div>
 
                     </div>
@@ -109,7 +110,7 @@
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/veca-sreca.png" alt="">
+                <img src="images/e-srecke/veca-sreca.png" alt="" data-toggle="modal" data-target="#veca-sreca">
             </div>
             <div class="srecke-item__text-big">
                 Veća sreća
@@ -121,13 +122,13 @@
                 cena: 200 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</i></a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/neon.png" alt="">
+                <img src="images/e-srecke/neon.png" alt="" data-toggle="modal" data-target="#neon">
             </div>
             <div class="srecke-item__text-big">
                 Neon
@@ -139,13 +140,13 @@
                 cena: 200 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/domine.png" alt="">
+                <img src="images/e-srecke/domine.png" alt="" data-toggle="modal" data-target="#domine">
             </div>
             <div class="srecke-item__text-big">
                 Domine
@@ -157,13 +158,13 @@
                 cena: 150 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/kolo-srece.png" alt="">
+                <img src="images/e-srecke/kolo-srece.png" alt="" data-toggle="modal" data-target="#kolo-srece">
             </div>
             <div class="srecke-item__text-big">
                 Kolo Sreće
@@ -175,13 +176,13 @@
                 cena: 100 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/instant-loto.png" alt="">
+                <img src="images/e-srecke/instant-loto.png" alt="" data-toggle="modal" data-target="#instant-loto">
             </div>
             <div class="srecke-item__text-big">
                 Instant loto
@@ -193,13 +194,13 @@
                 cena: 80 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/srecni-znaci.png" alt="">
+                <img src="images/e-srecke/srecni-znaci.png" alt="" data-toggle="modal" data-target="#srecni-znaci">
             </div>
             <div class="srecke-item__text-big">
                 Srećni znaci
@@ -211,13 +212,13 @@
                 cena: 100 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/greb-greb-100.png" alt="">
+                <img src="images/e-srecke/greb-greb-100.png" alt="" data-toggle="modal" data-target="#greb-greb-100">
             </div>
             <div class="srecke-item__text-big">
                 Greb Greb 100
@@ -229,13 +230,13 @@
                 cena: 100 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/ulepsaj.png" alt="">
+                <img src="images/e-srecke/ulepsaj.png" alt="" data-toggle="modal" data-target="#ulepsaj">
             </div>
             <div class="srecke-item__text-big">
                 Ulepšaj mi dan!
@@ -247,13 +248,13 @@
                 cena: 150 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/cup-sa-blagom.png" alt="">
+                <img src="images/e-srecke/cup-sa-blagom.png" alt="" data-toggle="modal" data-target="#cup-sa-blagom">
             </div>
             <div class="srecke-item__text-big">
                 Ćup sa blagom
@@ -265,13 +266,13 @@
                 cena: 100 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/pun-pogodak.png" alt="">
+                <img src="images/e-srecke/pun-pogodak.png" alt="" data-toggle="modal" data-target="#pun-pogodak">
             </div>
             <div class="srecke-item__text-big">
                 Pun pogodak!
@@ -283,13 +284,13 @@
                 cena: 100 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/greb-greb-game.png" alt="">
+                <img src="images/e-srecke/greb-greb-game.png" alt="" data-toggle="modal" data-target="#greb-greb-game">
             </div>
             <div class="srecke-item__text-big">
                 Greb Greb
@@ -301,13 +302,13 @@
                 cena: 150 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/par-nepar.png" alt="">
+                <img src="images/e-srecke/par-nepar.png" alt="" data-toggle="modal" data-target="#par-nepar">
             </div>
             <div class="srecke-item__text-big">
                 Par Nepar
@@ -319,7 +320,7 @@
                 cena: 150 din.
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a href="#" class="link-arrow link-arrow--red">Pravila igre</a>
             </div>
         </div>
 
@@ -362,7 +363,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <button class="btn-dark">Svi dobitnici</button>
+                    <button class="btn btn-dark">Svi dobitnici</button>
                 </div>
             </div>
         </div>
@@ -396,6 +397,187 @@
         </div>
     </div>
     <!-- CHARITY -->
+
+    <!-- Modals -->
+    <div class="modal fade greb-modal" id="veca-sreca" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/20x-veca-sreca.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="neon" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/neon.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="domine" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/domine.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="kolo-srece" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/kolo-srece.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="instant-loto" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/instant-loto.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="srecni-znaci" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/srecni-znaci.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="greb-greb-100" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/greb-greb-100.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="ulepsaj" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/ulepsaj-mi-dan.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="cup-sa-blagom" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/cup-sa-blagom.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="pun-pogodak" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/pun-pogodak.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="greb-greb-game" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/greb-greb.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade greb-modal" id="par-nepar" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/e-srecke/modals/par-nepar.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -518,13 +700,6 @@
         </div>
     </footer>
     <!-- FOOTER -->
-
-    <script>
-        $(document).on("click", '[data-toggle="lightbox"]', function (event) {
-            event.preventDefault();
-            $(this).ekkoLightbox();
-        });
-    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
