hero na e srecke je sad kao i na greb greb

--- a/e-srecke.html
+++ b/e-srecke.html
@@ -90,6 +90,9 @@
                 </div>
             </div>
         </div>
+        <div class="esgg-img-mob d-block d-md-none">
+            <img src="images/e-srecke/e-srecke-devojka_bg-mob.png" alt="">
+        </div>
     </section>
     <!-- ESGG HERO -->
 
