rad na stranici dobitnici

--- a/greb-greb.html
+++ b/greb-greb.html
@@ -328,10 +328,10 @@
     <!-- SRECKE -->
 
     <!-- SRECKE NEXT/PREV -->
-    <div class="srecke-btns justify-content-center align-items-center d-flex mt-4">
-        <p class="h5 mb-0 mr-3"><strong>Više srećki </strong></p>
-        <button type="button" id="prevv" class="slick-prev slick-arrow" style="">Previous</button>
-        <button type="button" id="nextt" class="slick-next slick-arrow" style="">Next</button>
+    <div class="games-btns justify-content-center align-items-center d-flex mt-4">
+        <p class="h5 mb-0 mr-3"><strong>Više igara </strong></p>
+        <button type="button" id="prevv" class="slick-prev">Previous</button>
+        <button type="button" id="nextt" class="slick-next">Next</button>
     </div>
     <!-- SRECKE NEXT/PREV -->
 
@@ -706,7 +706,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/b071412929.js" crossorigin="anonymous"></script>
