--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,52 @@
     <!-- AFTER FOOTER -->
 
 
+    <div class="modal fade" tabindex="-1" id="cookies">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-left d-flex flex-dir-column-mob align-items-start">
+                        <?xml version="1.0" encoding="utf-8"?>
+                        <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 48.7 46.7"
+                            enable-background="new 0 0 48.7 46.7" xml:space="preserve" height="64" class="mr-3 mb-1">
+                            <g>
+                                <path fill="#152238" d="M46.1,22.5c-0.9,0.5-2,0.9-3.2,0.9c-2.4,0-4.5-1.4-5.6-3.3c-0.3,0-0.6,0.1-0.9,0.1c-5.4,0-9.7-4.4-9.8-9.8
+		c0-0.3,0-0.6,0.1-0.9c-2-1.1-3.3-3.2-3.3-5.6c0-1.2,0.3-2.3,0.9-3.2c-0.3,0-0.6,0-0.9,0c-6.3,0-12,2.5-16.1,6.7
+		c-4.1,4.1-6.7,9.8-6.7,16.1c0,6.3,2.5,12,6.7,16.1c4.1,4.1,9.8,6.7,16.1,6.7c6.3,0,12-2.5,16.1-6.7c4.1-4.1,6.7-9.8,6.7-16.1
+		C46.1,23.1,46.1,22.8,46.1,22.5z M10.3,26.6c-1.8,0-3.3-1.5-3.3-3.3c0-1.8,1.5-3.3,3.3-3.3s3.3,1.5,3.3,3.3
+		C13.6,25.1,12.1,26.6,10.3,26.6z M15.2,36.4c-0.9,0-1.6-0.7-1.6-1.6c0-0.9,0.7-1.6,1.6-1.6s1.6,0.7,1.6,1.6
+		C16.8,35.6,16.1,36.4,15.2,36.4z M16.8,13.6c-1.8,0-3.3-1.5-3.3-3.3s1.5-3.3,3.3-3.3s3.3,1.5,3.3,3.3S18.6,13.6,16.8,13.6z
+		 M25,23.4c0.9,0,1.6,0.7,1.6,1.6c0,0.9-0.7,1.6-1.6,1.6c-0.9,0-1.6-0.7-1.6-1.6C23.3,24.1,24.1,23.4,25,23.4z M26.6,39.6
+		c-1.8,0-3.3-1.5-3.3-3.3s1.5-3.3,3.3-3.3c1.8,0,3.3,1.5,3.3,3.3S28.4,39.6,26.6,39.6z M38,33.1c-0.9,0-1.6-0.7-1.6-1.6
+		c0-0.9,0.7-1.6,1.6-1.6c0.9,0,1.6,0.7,1.6,1.6C39.6,32.4,38.9,33.1,38,33.1z" />
+                                <circle fill="#152238" cx="32.7" cy="3.1" r="1.8" />
+                                <circle fill="#152238" cx="37.5" cy="11.6" r="2" />
+                                <circle fill="#152238" cx="46.5" cy="7.8" r="1.7" />
+                            </g>
+                        </svg>
+<span>Internet stranica koristi kolačiće za obezbeđivanje boljeg korisničkog iskustva</span></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Daljom upotrebom ove internet stranice saglasni ste sa našom politikom kolačića.</p>
+                    <span class="separator-sm"></span>
+                </div>
+                <div class="modal-footer d-flex justify-content-between">
+                    <div>
+                        <a href="#" class="link-arrow">Politika privatnosti</a><br>
+                        <a href="#" class="link-arrow">Više</a>
+                    </div>
+                    <button type="button" class="btn btn-info font-weight-bold">PRIHVATAM</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
@@ -1173,6 +1219,12 @@
     <script src="js/main.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/b071412929.js" crossorigin="anonymous"></script>
+
+    <script>
+        setTimeout(function(){ 
+            $('#cookies').modal('show')
+        }, 3000);
+    </script>
     
 </body>
 
