--- a/dobitnici.html
+++ b/dobitnici.html
@@ -475,7 +475,27 @@
     </section>
     <!-- ALL WINNERS -->
 
- 
+    <!-- OUR PLAYERS -->
+    <section class="our-players">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 m-auto">
+                    <h5 class="text-uppercase text-center">Naši igrači su <br>u novembru osvojili</h5>
+                    <img src="images/dobitnici/srecko.png" alt="" class="our-players__srecko">
+                    <div class="our-players__cash d-flex justify-content-center">
+                        <h1 class="text-center">4.500.000€</h1>
+                    </div>
+                    <h5 class="text-center">...and counting!</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 m-auto">
+                    <img src="images/dobitnici/megafon.svg" alt="" class="megafon">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- OUR PLAYERS -->
 
     <!-- FOOTER -->
     <footer class="footer">
