dodao klasu za ikonicu pored hedera

--- a/partner.html
+++ b/partner.html
@@ -68,7 +68,7 @@
                             </div>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-outline-dark mr-sm-2 my-sm-0" type="submit">PRIJAVI SE</a>
+                    <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">PRIJAVI SE</a>
                     <a href="#" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ SE</strong></a>
                 </div>
             </nav>
@@ -87,7 +87,7 @@
                             <!-- Generator: Adobe Illustrator 24.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 74 74"
-                                enable-background="new 0 0 74 74" xml:space="preserve" height="60" class="align-bottom">
+                                enable-background="new 0 0 74 74" xml:space="preserve" height="60" class="align-bottom icon-heading">
                                 <g>
                                     <circle fill="#152238" cx="37" cy="37" r="37"></circle>
                                     <g id="XMLID_1321_">
