--- a/kontakt.html
+++ b/kontakt.html
@@ -66,7 +66,7 @@
                             </div>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-outline-dark mr-sm-2 my-sm-0" type="submit">PRIJAVI SE</a>
+                    <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">PRIJAVI SE</a>
                     <a href="#" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ SE</strong></a>
                 </div>
             </nav>
@@ -85,7 +85,7 @@
                             <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 79 79"
-                                enable-background="new 0 0 79 79" xml:space="preserve" height="60" class="align-bottom">
+                                enable-background="new 0 0 79 79" xml:space="preserve" height="60" class="align-bottom icon-heading">
                                 <g>
                                     <circle fill="#152238" cx="39.5" cy="39.5" r="39.1" />
                                     <g>
