dodao ikonicu za file upload

--- a/partner.html
+++ b/partner.html
@@ -263,6 +263,7 @@ Postani partner</p>
                                 </div>
                                 <div class="file-drop-area form-group">
                                     <span class="fake-btn">Dodajte fajl</span>
+                                    <span class="file-ico"></span>
                                     <span class="file-msg">ili prevucite fajl ovde</span>
                                     <input class="file-input" type="file" multiple>
                                 </div>
