--- a/bingo.html
+++ b/bingo.html
@@ -718,6 +718,31 @@
     </footer>
     <!-- FOOTER -->
 
+    <!-- AFTER FOOTER -->
+    <footer class="after-footer">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-4 mt-3">
+                    <span>2020. dls@alrightsreserved</span>
+                </div>
+                <div class="col-sm-3 mt-3 ml-auto">
+                    <div class="row align-items-center">
+                        <div class="col-4">
+                            <img src="images/Cert1.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert2.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert3.png" width="70">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- AFTER FOOTER -->
+
     <!-- kockica se bira -->
     <script>
         window.onload = chooseDice;
