--- a/finansijski-izvestaji.html
+++ b/finansijski-izvestaji.html
@@ -87,7 +87,8 @@
                           <!--?xml version="1.0" encoding="utf-8"?-->
                           <!-- Generator: Adobe Illustrator 24.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                          viewBox="0 0 79.7 79.6" enable-background="new 0 0 79.7 79.6" xml:space="preserve" height="60" class="align-bottom">
+                          viewBox="0 0 79.7 79.6" enable-background="new 0 0 79.7 79.6" xml:space="preserve" height="60"  class="align-bottom
+                          icon-heading">
                        <g>
                          <circle fill="#152238" cx="39.8" cy="39.8" r="39.5"/>
                          <path fill="#FFFFFF" d="M55,25.8l-7.2-7.2c-0.8-0.8-1.8-1.2-2.9-1.2H27.5c-2.3,0-4.1,1.8-4.1,4.1V57c0,2.3,1.8,4.1,4.1,4.1h24.6
@@ -153,7 +154,7 @@
                   <td>Izveštaj o stepenu usklađenosti planiranih i realizovanih aktivnosti iz godišnjeg programa poslovanja za period 01.01. - 30.09.2020. godine</td>
                   <td>
                     <a href="#">
-                      <img src="images/Download-icon-01.svg" alt="">
+                      <img src="images/Download icon-01.svg" alt="">
                     </a>
                   </td>
               </tr>
@@ -161,7 +162,7 @@
                   <td>Izvestaj o stepenu usklađenosti planiranih i realizovanih aktivnosti iz godišnjeg programa poslovanja za period 01.01.-30.06.2020. godine</td>
                   <td>
                     <a href="#">
-                      <img src="images/Download-icon-01.svg" alt="">
+                      <img src="images/Download icon-01.svg" alt="">
                     </a>
                   </td>
               </tr>
@@ -169,7 +170,7 @@
                 <td>Godišnji izveštaj o poslovanju za 2019. godinu</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -177,7 +178,7 @@
                 <td>Izveštaj nezavisnog revizora za 2019. godinu</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -185,7 +186,7 @@
                 <td>Redovan godišnji finansijski izveštaj za 2019. godinu</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -193,7 +194,7 @@
                 <td>Izveštaj o stepenu usklađenosti planiranih i realizovanih aktivnosti iz godišnjeg plana poslovanja za period 01.01.-31.03.2020. godine</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -201,7 +202,7 @@
                 <td>Godišnji plan poslovanja 2020. godina</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -209,7 +210,7 @@
                 <td>Izveštaj o stepenu usklađenosti planiranih i realizovanih aktivnosti iz plana poslovanja za period 01.01. - 31.12.2019. godine</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -218,7 +219,7 @@
                   plana poslovanja za period 01.01. - 31.12.2019. godine</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -227,7 +228,7 @@
                   plana poslovanja za period 01.01. - 31.12.2019. godine</td>
                 <td>
                   <a href="#">
-                    <img src="images/Download-icon-01.svg" alt="">
+                    <img src="images/Download icon-01.svg" alt="">
                   </a>
                 </td>
               </tr>
@@ -1502,6 +1503,31 @@
         </div>
     </footer>
     <!-- FOOTER -->
+
+    <!-- AFTER FOOTER -->
+    <footer class="after-footer">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-4 mt-3">
+                    <span>2020. dls@alrightsreserved</span>
+                </div>
+                <div class="col-sm-3 mt-3 ml-auto">
+                    <div class="row align-items-center">
+                        <div class="col-4">
+                            <img src="images/Cert1.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert2.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert3.png" width="70">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- AFTER FOOTER -->
 
     <script src="js/paginate.js"></script>
 
