--- a/greb-greb.html
+++ b/greb-greb.html
@@ -701,6 +701,31 @@
     </footer>
     <!-- FOOTER -->
 
+    <!-- AFTER FOOTER -->
+    <footer class="after-footer">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-4 mt-3">
+                    <span>2020. dls@alrightsreserved</span>
+                </div>
+                <div class="col-sm-3 mt-3 ml-auto">
+                    <div class="row align-items-center">
+                        <div class="col-4">
+                            <img src="images/Cert1.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert2.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert3.png" width="70">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- AFTER FOOTER -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
